Fix Docusaurus prompt z-index

--- a/packages/docusaurus-theme-search/src/theme/SearchBar/index.module.css
+++ b/packages/docusaurus-theme-search/src/theme/SearchBar/index.module.css
@@ -52,6 +52,7 @@
   overflow: hidden;
   display: grid;
   grid-template-rows: auto 1fr;
+  z-index: calc(var(--ifm-z-index-fixed) + 2);
 }
 
 .MarkpromptClose {
